Add animal breeder machine

--- a/src/main/resources/assets/minefabrictory/lang/en_us.json
+++ b/src/main/resources/assets/minefabrictory/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-	"block.minefabrictory.sheep_shear": "Sheep Shearing Machine"
+	"block.minefabrictory.sheep_shear": "Sheep Shearing Machine",
+	"block.minefabrictory.animal_breeder": "Animal Breeding Machine"
 }
